# QuantiGence

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tasks.py
.deepeval/: .deepeval_telemetry.txt
assets/: backgound.avif
frontend/frontend/: package-lock.json  package.json
frontend/frontend/app/: layout.tsx  page.tsx
frontend/frontend/components/ui/: QuantitativeChart.tsx  header.tsx
frontend/frontend/hooks/: useFinancialData.ts
frontend/frontend/lib/: api.ts
frontend/frontend/store/: useDashboardStore.ts
notebooks/: 01_chunking_experiments.ipynb  graph_modeling.ipynb
src/agents/: __init__.py  analyst.py  auditor.py  base_agent.py  ingest_user_turn.py  researcher.py  supervisor.py
src/core/: __init__.py  config.py  constants.py  database.py  edgar_client.py  io.py  logger.py  state.py
src/cypher/: ingestion_queries.py  queries.py
src/ingestion/: README.md  mapper.py  postprocess.py  run_chunking.py  tenk_chunker.py  tenq_chunker.py  toc.py
src/orchestration/: graph.py
src/prompts/: analyst_prompts.py  auditor_prompts.py  retrieval_prompts.py
src/retrieval/: neo4j_retriever.py  reranker.py  retrieval_helpers.py
src/scripts/: ingest_data.py
src/services/: analyst_service.py  evaluation.py  ingestion_service.py  memory.py  query_processor.py  retrieval_service.py  risk_matrix.py  safety.py
src/tools/: mistral_client.py  mistral_functions.py  query_decomposer_helpers.py
