[project]
name = "quantigence"
version = "0.1.0"
description = ""
authors = [
    {name = "alpha-coder38",email = "paymodeharshad00@gmail.com"}
]
readme = "README.md"



requires-python = ">=3.11, <3.13"
dependencies = [
    "redis (>=7.1.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-core (>=1.1.0,<2.0.0)",
    "llama-index (>=0.14.8,<0.15.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "edgartools (>=4.35.0,<5.0.0)",
    "frozendict (>=2.4.7,<3.0.0)",
    "path (>=17.1.1,<18.0.0)",
    "cssutils (>=2.11.1,<3.0.0)",
    "neo4j (==5.28.2)",
    "langchain-neo4j (==0.6.0)",
    "neo4j-graphrag[mistralai] (>=1.11.0,<2.0.0)",
    "reportlab (==4.4.3)",
]

[tool.poetry]
packages = [{include = "quantigence", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
